# GeostatsPy

./: .gitignore  .travis.yml  CITATION.cff  GeostatsPy.ipynb  GeostatsPy.py  LICENSE  Nscore.ipynb  README.md  declus.py  kb2d.ipynb  kb2d.py  publish.yml  pyproject.toml  setup.py  varmapv.py
.github/workflows/: run_tests.yml
examples/: Declus.ipynb  Gam.ipynb  Gamv.ipynb  GeostatsPy_Testing.ipynb  Nscore.ipynb  kb2d.ipynb
geostatspy/: GSLIB.py  __init__.py  geostats.py  geostats[1].py  testing.ipynb
geostatspy/tests/: sample_data.csv  test.py
tests/: test_GSLIB.py  test_geostats.py
tests/test_data/: test_declus.csv
working/: GeostatsPy.py  GeostatsPy_sisim_working.ipynb  gam.py  gamv.py  kb2d.py  nscore.py  sgsim.ipynb  sgsim_alpha.ipynb  sgsim_alpha2.ipynb  sgsim_alpha3.ipynb
